--- a/index.html
+++ b/index.html
@@ -3,9 +3,31 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Portafolio de ilustraciones de Robert Red">
-    <meta name="author" content="robertred">
-    <link rel="icon" type="image/png" href="img/favicon.png" />
+    
+   <!-- COMMON TAGS -->
+<meta charset="utf-8">
+<title>Robert Red - Portafolio</title>
+<!-- Search Engine -->
+<meta name="description" content="Portafolio de ilustraciones de Robert Red">
+<meta name="image" content="https://66.media.tumblr.com/efe8470c54d470f88ef26e94d96499b0/tumblr_p2qyrzo15l1uwhrejo1_1280.png">
+<!-- Schema.org for Google -->
+<meta itemprop="name" content="Robert Red - Portafolio">
+<meta itemprop="description" content="Portafolio de ilustraciones de Robert Red">
+<meta itemprop="image" content="https://66.media.tumblr.com/efe8470c54d470f88ef26e94d96499b0/tumblr_p2qyrzo15l1uwhrejo1_1280.png">
+<!-- Twitter -->
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="Robert Red - Portafolio">
+<meta name="twitter:description" content="Portafolio de ilustraciones de Robert Red">
+<meta name="twitter:site" content="@RobertRedArt">
+<meta name="twitter:creator" content="@RobertRedArt">
+<meta name="twitter:image:src" content="https://66.media.tumblr.com/efe8470c54d470f88ef26e94d96499b0/tumblr_p2qyrzo15l1uwhrejo1_1280.png">
+<!-- Open Graph general (Facebook, Pinterest & Google+) -->
+<meta name="og:title" content="Robert Red - Portafolio">
+<meta name="og:description" content="Portafolio de ilustraciones de Robert Red">
+<meta name="fb:admins" content="100000037542189">
+<meta name="og:type" content="website">
+    
+    <link rel="icon" type="image/png" href="img/favicon.png"/>
 
     <title>Haus of Rojas</title>
 
@@ -24,7 +46,7 @@
           <div class="row">
             <div class="col-sm-8 col-md-7 py-4">
               <h4 class="text-white"> <i class="fas fa-pen-square"></i> Conoceme</h4>
-              <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+              <p class="text-muted"> Ilustrador Freelance.</p>
             </div>
             <div class="col-sm-4 offset-md-1 py-4">
               <h4 class="text-white">Socialicemos</h4>
